2011-11-09	Werner Almesberger <werner@almesberger.net>

	PR 1957/cpukit
	* score/include/rtems/score/coremutex.h,
	score/inline/rtems/score/threadmp.inl: Add parentheses to protect
	macro arguments.

2011-11-07	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 1952/cpukit
	* libmisc/untar/untar.c: Add return code for failure when unable to
	write file.

2011-11-06      Ralf Corsépius <ralf.corsepius@rtems.org>

	PR1945/cpukit
	* libcsupport/include/rtems/libio.h: Mark rtems_off64_t as
	deprecated.
	Replace rtems_off64_t with off_t.
	* libfs/src/defaults/default_ftruncate.c, 
	libfs/src/defaults/default_lseek.c:
	Replace rtems_off64_t with off_t.
	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_dir.c,
	libfs/src/dosfs/msdos_file.c: Replace rtems_off64_t with off_t.
	* libfs/src/imfs/deviceio.c, libfs/src/imfs/imfs.h,
	libfs/src/imfs/imfs_directory.c, libfs/src/imfs/imfs_fifo.c,
	libfs/src/imfs/memfile.c: Replace rtems_off64_t with off_t.
	* libfs/src/nfsclient/src/nfs.c, libfs/src/rfs/rtems-rfs-rtems-dev.c,
	libfs/src/rfs/rtems-rfs-rtems-dir.c,
	libfs/src/rfs/rtems-rfs-rtems-file.c, libnetworking/lib/ftpfs.c,
	libnetworking/lib/tftpDriver.c: Replace rtems_off64_t with off_t.

2011-11-06      Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-dir.c: Rename PRIdoff_t into PRIooff_t.

2011-11-04      Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-dir.h: Commit the missing change. Part
	of removing the hardcoded dir string.
	
2011-11-03      Chris Johns <chrisj@rtems.org>

	PR 1948/filesystem
	* libfs/src/rfs/rtems-rfs-file-system.c,
	libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-format.c, libfs/src/rfs/rtems-rfs-rtems.c:
	Add support for mount passing an ASCIIZ string containing
	configuration options. Remove the hardcoded dir string and
	size. Fix comments.
	* libblock/src/bdbuf.c: Fix state labels in trace output.

2011-10-30	Ralf Corsépius <ralf.corsepius@rtems.org>
